-Made job listing in Join Us block like jobs page -Fixed scoreboard spacing -Reduced height of Join Us block

--- a/blocks/job-list/job-list.css
+++ b/blocks/job-list/job-list.css
@@ -18,11 +18,6 @@
     width: 50%;
 }
 
-.job-list .single-job {
-     color:inherit;
-     text-decoration: none;
-}
-
 .job-list.block{
     display: flex;
     flex-direction: column;
@@ -31,17 +26,50 @@
     background-color: #ffffff;
     width: 100%;
     height: 66.66%;
+    padding: 0 3em;
     box-sizing: border-box;
 }
 
-.job-list.block p{
-    font-size: 20px;
+.job-list .single-job {
+    font-size: 0.8em;
+    line-height: 1em;
+    display:grid;
+    grid-template-columns: 78% 20%;
+    grid-column-gap: 2%;
+    grid-template-rows: repeat(4, 32%);
+    align-items: start;
+
+    color: #0B1C40;
+    text-decoration: none;
+    padding: 2.5em 0;
+    height: 4em;
+
+    border-bottom: 2px #0B1C40 solid
+
 }
 
-.job-list .single-job,
-.job-list .see-jobs{
-    border-bottom: solid 2px #0B1C40;
-    margin: 0 3em;
+.job-list .single-job>p,
+.job-list .single-job>h3{
+    display: unset;
+    margin-block: unset;
+}
+.job-list .single-job h3{
+    font-weight: 300; /*Currently we only have vars for 200 and 400*/
+    font-size: 1.7em;
+    line-height: 1em;
+    grid-area: 1/1/2/2;
+}
+.job-list .single-job p:nth-of-type(1){
+    grid-area: 4/1/5/2
+}
+.job-list .single-job p:nth-of-type(2){
+    padding-top:0.2em;
+    grid-area: 1/2/2/3;
+    text-align: end;
+}
+.job-list .single-job p:nth-of-type(3){
+    grid-area: 3/2/4/3;
+    text-align: end;
 }
 
 .job-list .see-jobs{
@@ -50,47 +78,15 @@
     align-self: flex-start;
     margin-bottom:2em;
     text-decoration:none;
+    color: #252525;
 }
 .job-list .see-jobs span {
     font-weight: 500;
     border: 2px solid black;
     border-radius: 2em;
-    padding: 0.8em 1em;
+    padding: 0.5em 1em;
 }
 
-.single-job div:first-child{
-    display: grid;
-    grid-template-columns: minmax(auto, 600px);
-    grid-template-rows: repeat(6, 2em);
-}
-
-.single-job h3{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    font-size: 2.2rem;
-}
-
-.single-job p{
-    grid-column-start: 5;
-    grid-row-start: 2;
-    text-align: end;
-}
-
-.single-job p:nth-child(3){
-    grid-row-start: 5;
-}
-
-.single-job p:nth-child(4){
-    grid-column-start: 1;
-    grid-row-start: 5;
-    text-align: start;
-}
-
-.single-job div:nth-child(3){
-    color: orchid;
-}
 
 #all-jobs{
     font-size: 20px;
@@ -104,71 +100,24 @@
     }
 }
 
-@media (max-width:767px)
-{
-    .single-job div:first-child {
-        grid-template-columns: 300px;
-    }
-    /* .single-job h3 {} */
-}
-@media only screen and (max-width: 767px){
-    .single-job .job-title{
-        font-size: 2em;
-    }
-    .joblist.block{
-        display: flex;
-        flex-direction: column;
-    }
-    body > main > div > div > div.two-column.block > div > div:nth-child(1) > div.job-list.block > div:nth-child(1) > div{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    body > main > div > div > div.two-column.block > div > div:nth-child(1) > div.job-list.block > div:nth-child(2) > div{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    body > main > div > div > div.two-column.block > div > div:nth-child(1) > div.job-list.block > div:nth-child(3) > div{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    body > main > div > div > div.two-column.block > div > div:nth-child(1) > div.job-list.block > div:nth-child(4) > div{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-}
 @media only screen and (max-width: 425px){
     #join-us{
         font-size: 6rem;
         width: 100%;
     }
-    .single-job .job-title{
-        font-size: 2em;
-        margin-right: 0;
+
+    .job-list.block{
+        padding: 0 2em;
     }
-    .single-job .experience{
-        font-size: .5em;
+    .job-list .single-job h3{
+        font-size: 1.3rem;
     }
-    .single-job div:first-child{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+    .job-list .single-job{
+        height: auto;
     }
 }
 
 @media only screen and (max-width: 320px){
-    .single-job .job-title{
-        font-size: 1.5em;
-    }
 
 }
 @media only screen and (min-width: 321px) and (max-width: 375px){
